Fixed signature field issue on iOS because of faulty CSS

--- a/frontend/geenpeil-ember/app/styles/components/signature-field.scss
+++ b/frontend/geenpeil-ember/app/styles/components/signature-field.scss
@@ -28,6 +28,7 @@
     margin:auto;
 
     transform-origin: top;
+    -webkit-transform-origin: top;
 
     border: 1px solid black;
     background-color: #eeeeee;
